--- a/package.json
+++ b/package.json
@@ -28,5 +28,9 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "volta": {
+    "node": "22.11.0",
+    "yarn": "1.22.19"
   }
 }
