--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "cypress": "cypress open"
+    "cypress": "cypress open",
+    "e2e": "start-server-and-test dev 3000 cypress"
   },
   "dependencies": {
     "axios": "^1.7.7",
@@ -28,6 +29,7 @@
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
+    "start-server-and-test": "^2.0.8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
